--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,3 +72,8 @@ h1{
     width:300px;
     box-shadow: 1px 2px 6.5px rgba(0, 0, 0, 0.89);
 }
+
+.correct, .incorrect, .result {
+    margin-bottom: 20px;
+    text-transform: capitalize;
+  }
